<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:scaleType="fitStart"
            tools:targetApi="o" />

        <Button
            android:id="@+id/button"
            android:layout_width="156dp"
            android:layout_height="45dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/editText2"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:text="@string/login"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/black"
             />

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="31dp"
            android:layout_below="@+id/button"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="550dp"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:text="@string/no_of_attempts_remaining1" />
        <TextClock
            android:id="@+id/textClock"
            android:layout_width="200dp"
            android:layout_height="31dp"
            />

    </RelativeLayout>
</ScrollView>